ICS-2931 move min width off the body to prevent multiple scrollbars

--- a/source/scss/_page.scss
+++ b/source/scss/_page.scss
@@ -5,7 +5,6 @@ html {
 }
 
 body {
-  min-width: 1200px;
   text-rendering: optimizeLegibility;
 }
 
